<resources>
    <string name="app_name">Al-Baraka</string>
    <string name="mobile_no">মোবাইল নম্বর</string>
    <string name="otp">ওটিপি(OTP)</string>
    <string name="pin">পিন(PIN)</string>
    <string name="sign_up">সাইন আপ</string>
    <string name="sign_in">সাইন ইন</string>
    <string name="submit">সাবমিট</string>
    <string name="progress_dialog_message">অনুগ্রহপূর্বক অপেক্ষা করুন </string>
    <string name="mobile_number_ask">মোবাইল নম্বর প্রদান করুন </string>
    <string name="OTP_ask">ওটিপি(OTP) প্রদান করুন </string>
    <string name="PIN_ask">পিন(PIN) প্রদান করুন </string>
    <string name="no_internet_connection">ইন্টারনেট সংযোগ নেই </string>
    <string name="no_server_message">দুঃখিত, বর্তমানে এই সেবাটি বন্ধ আছে। কিছুক্ষন পরে আবার চেষ্টা করুন। </string>
    <string name="user_id">গ্রাহকের আইডি</string>
    <string name="user_name">গ্রাহকের নাম</string>
    <string name="user_mobile_no">গ্রাহকের মোবাইল নম্বর</string>
    <string name="id">আইডি</string>
    <string name="name">নাম</string>
    <string name="mobile">মোবাইল</string>
    <string name="search">খুঁজুন</string>
    <string name="user_details_header">গ্রাহক তথ্য </string>
    <string name="installment">কিস্তি </string>
    <string name="per_monthly">1000/মাসিক </string>
    <string name="paid">পরিশোধিত </string>
    <string name="paid_date">5000/10-12-2019</string>
    <string name="last_paid">শেষ পরিশোধ </string>
    <string name="last_paid_date">5000/10-12-2019</string>
    <string name="due">বকেয়া </string>
    <string name="due_value">3000 from july 19 </string>
    <string name="payment_amount">জমার পরিমান</string>
    <string name="payment_type">জমার ধরণ </string>
    <string name="cash">ক্যাশ </string>
    <string name="cheque">চেক </string>
    <string name="submit1">দাখিল করুন </string>
    <string name="req_atleast_one_info">অন্তত একটি তথ্য দিন</string>
    <string name="no_subscriber_msg">গ্রাহক পাওয়া যায়নি </string>
    <string name="cheque_no">চেক নম্বর </string>
    <string name="bank_name">ব্যাংকের নাম </string>
    <string name="cheque_date">চেকের তারিখ </string>
    <string name="login_title">আল-বারাকা হজ্জ এন্ড ওমরাহ মাল্টিপারপাস\nকো-অপারেটিভ সোসাইটি লিমিটেড </string>
    <string name="app_name_long">আল-বারাকা হজ্জ এন্ড ওমরাহ মাল্টিপারপাস কো-অপারেটিভ সোসাইটি লিমিটেড </string>
    <string name="subscriber_list">গ্রাহকের তালিকা </string>
    <string name="opt_request_again">পুনরায় OTP অনুরোধ করুন </string>
    <string name="amount_ask">জমার পরিমান প্রদান করুন </string>
    <string name="bank_ask">ব্যাংকের নাম প্রদান করুন </string>
    <string name="cheque_no_ask">চেক নম্বর প্রদান করুন </string>
    <string name="date_ask">চেকের তারিখ প্রদান করুন </string>
    <string name="no_bank_msg">ব্যাংক পাওয়া যায়নি</string>
</resources>
