<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.15"
            android:lines="1"
            android:text="@string/id"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.15"
            android:lines="1"
            android:text="@string/name"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"/>

        <TextView
            android:id="@+id/tv_user_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:lines="1"
            android:text="@string/mobile"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"/>
    </LinearLayout>
</LinearLayout>
