<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9ebed"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingLeft="@dimen/item_bottom_margin"
        android:paddingRight="@dimen/item_bottom_margin"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_textsize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/item_bottom_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/label_text_size" />

                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_mobile"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/item_bottom_margin"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/label_text_size" />

                <EditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_otp_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="2dp"
                    android:text="@string/opt_request_again"
                    android:textColor="@android:color/holo_blue_light"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_otp"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/item_bottom_margin"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/label_text_size" />

                <EditText
                    android:id="@+id/edt_pin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/ln_pin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:background="@drawable/rounded_button"
                android:imeOptions="actionDone"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>