<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="#e9ebed"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_gap"
            android:src="@drawable/logout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/label_text_size"
            android:gravity="left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/iv_logout"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/item_bottom_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/edt_user_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:background="@drawable/rounded_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ln_user_id"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/item_bottom_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_mobile_no"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:background="@drawable/rounded_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ln_mobile"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/item_bottom_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/rounded_edittext"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/ln_name"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/search"
        android:textSize="@dimen/button_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>